--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Eric Esquivel's Blog</title>
+    <title>Siddharth Sriram's Blog</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="/css/bootstrap.min.css" rel="stylesheet">
@@ -44,7 +44,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/index.html">Eric Esquivel's Blog</a>
+                <a class="navbar-brand" href="/index.html">Siddharth Sriram's Blog</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -54,10 +54,10 @@
                         <a href="/index.html">Home</a>
                     </li>
                     <li>
-                        <a href="/assets/resume.pdf">Resume</a>
+                        <a href="https://drive.google.com/file/d/1E8qMwteCGdVT08BgSiqQD6GXD64y3p2m/view?usp=sharing">Resume</a>
                     </li>
                     <li>
-                        <a href="https://github.com/EricEsquivel">GitHub</a>
+                        <a href="https://github.com/AureliusOctavion">GitHub</a>
                     </li>
                 </ul>
             </div>
@@ -73,7 +73,7 @@
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <div class="site-heading">
-                        <h1 font color="#000000">Eric Esquivel's Blog</h1>
+                        <h1 font color="#000000">Siddharth Sriram's Blog</h1>
                         <hr class="small">
                         <span class="subheading"></span>
                     </div>
@@ -190,7 +190,7 @@
                             </a>
                         </li>
                     </ul>
-                    <p class="copyright text-muted">Eric Esquivel's Blog</p>
+                    <p class="copyright text-muted">Siddharth Sriram's Blog</p>
                 </div>
             </div>
         </div>
